Multiple locations versions

--- a/index.html
+++ b/index.html
@@ -1,29 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style>
-		.container {
-			display: flex;
-			flex-direction: row;
-			justify-content: space-between;
-			align-items: center;
-			gap: 50px;
-			height: 100vh;
-		}
-
-		video {
-			width: calc(50% - calc(50px / 2));
-			height: auto;
-			object-fit: contain;
-		}
-	</style>
+	<title>Hackuarium versions</title>
 </head>
 <body>
-	<div class="container">
-		<video src="left.mp4" autoplay muted loop></video>
-		<video src="right.mp4" autoplay muted loop></video>
-	</div>
+	<h1>Hackuarium sandbox</h1>
+	<ul>
+		<li><a href="black.html">Locations</a></li>
+		<li><a href="grey.html">Locations (gray)</a></li>
+		<!-- <li><a href="grey.html">Grey</a></li> -->
+	</ul>
 </body>
 </html>
+
 
 
