--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hackuarium versions</title>
+	<title>Hackuarium Sandbox</title>
 </head>
 <body>
-	<h1>Hackuarium sandbox</h1>
+	<h1>Pieces</h1>
 	<ul>
 		<li><a href="black.html">Locations</a></li>
 		<li><a href="grey.html">Locations (gray)</a></li>
