Added pause/resume on click

--- a/black.html
+++ b/black.html
@@ -23,6 +23,9 @@
 		<video src="left-black.mp4" autoplay muted loop></video>
 		<video src="right-black.mp4" autoplay muted loop></video>
 	</div>
+
+	<script src="js/video-player.js"></script>
+	
 </body>
 </html>
 
