New versions for locations piece

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 	<title>Hackuarium Sandbox</title>
 </head>
 <body>
-	<h1>Pieces</h1>
+	<h1>Hackuarium Sandbox</h1>
+	<h2>Locations</h2>
 	<ul>
-		<li><a href="black.html">Locations</a></li>
-		<li><a href="grey.html">Locations (gray)</a></li>
-		<!-- <li><a href="grey.html">Grey</a></li> -->
+		<li><a href="small-left-static-right.html">Small left, static right</a></li>
+		<li><a href="big-left-static-right.html">Big left, static right</a></li>
+		<li><a href="big-left-not-centered-static-right.html">Big left (not centered), static right</a></li>
+		<li><a href="small-left-animated-right.html">Small left, animated right</a></li>
+		<!--<li><a href="small-left-animated-right-custom.html">Locations - small left animated right custom animation</a></li>-->
+		<li><a href="big-left-animated-right.html">Big left, animated right</a></li>
+		<!--<li><a href="grey.html">Locations (gray)</a></li>-->
 	</ul>
 </body>
 </html>
